...
    let repository: LocalDataRepository

    var body: some View {
        TabView {
            HomeView(repository: repository)
                .tabItem {
                    Label("Markers", systemImage: "heart.text.square.fill")
                }

            VisitsView(repository: repository)
                .tabItem {
                    Label("Visits", systemImage: "calendar")
                }

            SettingsView(repository: repository)
                .tabItem {
                    Label("Settings", systemImage: "gear")
                }
        }
        .tint(Color.accentColor)
    }
}

...
